--- a/source/stylesheets/pages/_specialities.scss
+++ b/source/stylesheets/pages/_specialities.scss
@@ -1,6 +1,6 @@
 
 .special-show-banner {
-  height: 60vh;
+  height: 65vh;
   width: 100vw;
   background: #000428; /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #000428, #004e92); /* Chrome 10-25, Safari 5.1-6 */
